Added staticfiles and home view.

--- a/templates/excalibur-port/files.html
+++ b/templates/excalibur-port/files.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "excalibur-port/base.html" %}
 {% load static %}
 {% block stylesheet %}
 {% endblock %}
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <form class="mb-5">
+  <form class="mb-5" method="post" action="">
     <div class="row align-items-center">
       <div class="col-md-6 col-sm-6 col-xs-12">
         <div class="input-group">
