--- a/templates/excalibur-port/base.html
+++ b/templates/excalibur-port/base.html
@@ -30,25 +30,17 @@
       </button>
 
       <!-- http://jinja.pocoo.org/docs/2.10/tricks/#highlighting-active-menu-items -->
-      {% set navigation_bar = [
-          ('/files', 'files', 'Files'),
-          ('/rules', 'rules', 'Rules'),
-          ('/jobs', 'jobs', 'Jobs')
-      ] -%}
-      {% set active_page = active_page|default('files') -%}
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          {% for href, id, caption in navigation_bar %}
-            {% if id == active_page %}
               <li class="nav-item active">
-                <a class="nav-link" href="{{ href|e }}">{{ caption|e }}</a>
+                <a class="nav-link" href="/job">Job</a>
               </li>
-            {% else %}
               <li class="nav-item">
-                <a class="nav-link" href="{{ href|e }}">{{ caption|e }}</a>
+                <a class="nav-link" href="/jobs">Jobs</a>
               </li>
-            {% endif %}
-          {% endfor %}
+              <li class="nav-item">
+                  <a class="nav-link" href="/workspace">Workspace</a>
+              </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
