--- a/templates/excalibur-port/base.html
+++ b/templates/excalibur-port/base.html
@@ -6,23 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Excalibur</title>
-
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
-
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
     {% block stylesheet %}{% endblock %}
   </head>
-
   <body>
-
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top primary-bg">
       <a class="navbar-brand" href="/">Excalibur</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,33 +26,28 @@
       <!-- http://jinja.pocoo.org/docs/2.10/tricks/#highlighting-active-menu-items -->
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="/job">Job</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/jobs">Jobs</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="/workspace">Workspace</a>
-              </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/job">Job</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/jobs">Jobs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/workspace">Workspace</a>
+          </li>
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="https://opencollective.com/excalibur/" target="_blank">Support Excalibur on OpenCollective!</a>
+            <a class="nav-link" href="/logout/" target="_blank">Logout</a>
           </li>
         </ul>
       </div>
     </nav>
-
     {% block files %}{% endblock %}
     {% block workspace %}{% endblock %}
     {% block rules %}{% endblock %}
     {% block jobs %}{% endblock %}
     {% block job %}{% endblock %}
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
