Added validation to signup forms

--- a/templates/excaliburclient/base.html
+++ b/templates/excaliburclient/base.html
@@ -82,5 +82,7 @@
     <script src="{% static "js/jquery.ajaxchimp.min.js" %}"></script>
     <script src="{% static "js/mail-script.js" %}"></script>
     <script src="{% static "js/theme.js" %}"></script>
+    {% block extra_js %}
+    {% endblock %}
   </body>
 </html>
