--- a/templates/excaliburclient/signup.html
+++ b/templates/excaliburclient/signup.html
@@ -10,36 +10,35 @@
 	  <h3>Welcome! <br>
 	    Please Create your account</h3>
 	  <p class="email-linking">
-	    <a href="#">Or Register with email</a>
 	  </p>
-	  <form action="/signup/" method="post" class="customer-input">
+	  <form action="/signup/" method="post" class="customer-input" onsubmit="return checkForm(this);">
+        {% if messages %}
+            {% for message in messages %}
+            <code>
+                <div class="alert text-center {{ message.tags }}" role="alert">
+                    <h4 style="color: #e83e8c" class="text-center">Errors:</h4><br>
+                    <p id="errors">{{ message }}</p>
+                </div>
+            </code>
+            {% endfor %}
+            <br><br><br>
+        {% endif %}
 	    {% csrf_token %}
 	    <div class="row">
 	      <div class="col-lg-6 col-md-6">
-		<input name="first_name" type="text" placeholder="Fist Name">
+		<input name="first_name" type="text" placeholder="First Name" required="required">
 	      </div>
 	      <div class="col-lg-6 col-md-6">
-		<input name="username" type="text" placeholder="Username">
+		<input name="username" type="text" placeholder="Username" required="required">
 	      </div>
 	      <div class="col-lg-6 col-md-6">
-		<input name="email" type="email" placeholder="Email address">
+		<input name="email" type="email" placeholder="Email address" required="required">
 	      </div>
 	      <div class="col-lg-6 col-md-6">
-		<input name="password" type="password" placeholder="Choose password">
+		<input name="password" type="password" placeholder="Choose password" required="required">
 	      </div>
 	    </div>
 	    <div class="forgot-pass">
-	    <div class="check-remamber-field">
-	      <div class="round">
-		<input type="checkbox" id="checkbox" />
-		<label for="checkbox"></label>
-	      </div>
-	      <span class="remember-me resitration-privacy">
-		By signing up, you agree to <a href="#">Terms of Service</a> and <a href="#">Privacy
-		  Policy</a>
-	      </span>
-	    </div>
-	  </div>
 	  <button type="submit" class="login-res-btn">Register</button>
 	  <div class="create-account">
 	    <p>Already a member yet? <a href="/login/">Login account</a> here.</p>
